FIX Retain text colour of btn-links on focus/hover in dark mode

--- a/client/src/styles/mfa.scss
+++ b/client/src/styles/mfa.scss
@@ -54,5 +54,10 @@
     .btn-link {
       color: var(--color-text);
     }
+
+    .btn-link:focus,
+    .btn-link:hover {
+      color: var(--color-text);
+    }
   }
 }
